# C-Projects

./: Readme.md
CPP_Design_Questions/: Makefile  spiral_matrix.cpp
Casting_Ops/: Makefile  Readme.md  casting_counter.cpp  casting_counter.h  counter_test.cpp
Constr_Destr_Counter/: Makefile  Readme.md  constr_destr_counter.cpp  constr_destr_counter.h  counter_test.cpp
Functions_Project/: Makefile  Readme.md  counter_test.cpp  func_counter.h  functions_counter.cpp
IO_Project/: Makefile  Readme.md  a.out  io_ops.cc  test.cc  user_data.txt
Ref_Counter/: Makefile  Readme.md  counter_test  counter_test.cpp  ref_counter  ref_counter.cpp  ref_counter.h
Temperature_Converter/: CMakeLists.txt  Readme.md  main.cpp  temperature_converter.cpp  temperature_converter.h
Text File Processor/: Cursor.h  Readme.md  TextBuffer.h  TextEditor.h
